P2/0516320_project2/Compiler/MiniJava.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniJava.java */
import java.io.*;

class MiniJava/*@bgen(jjtree)*/implements MiniJavaTreeConstants, MiniJavaConstants {/*@bgen(jjtree)*/
  protected JJTMiniJavaState jjtree = new JJTMiniJavaState();

  public static void main(String args[]) {
    MiniJava t =null;
    if(args.length>0){
        try {
                t=new MiniJava(new FileInputStream(new File(args[0])));
                }
                catch (FileNotFoundException e) {e.printStackTrace();}
    }else{
        t=new MiniJava(System.in);
    }


    try {
      SimpleNode n = t.Start();
      SymbolTableVisitor symbolTable=new SymbolTableVisitor();
      n.jjtAccept(symbolTable,null);
      n.jjtAccept(new TypeCheckVisitor(symbolTable.table),null);
      n.jjtAccept(new PrintVisitor(),null);
      System.out.println("Type Checking Complete.");
    } catch (Exception e) {
      System.out.println("Error exists.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

  final public SimpleNode Start() throws ParseException {
                      /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      MainClass();
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        ClassDeclaration();
      }
                                        jjtree.closeNodeScope(jjtn000, true);
                                        jjtc000 = false;
                                        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void MainClass() throws ParseException {
                    /*@bgen(jjtree) MainClass */
  ASTMainClass jjtn000 = new ASTMainClass(JJTMAINCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      Identifier();
      jj_consume_token(32);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(33);
      jj_consume_token(STRING);
      jj_consume_token(34);
      jj_consume_token(35);
      Identifier();
      jj_consume_token(36);
      jj_consume_token(32);
      Statement();
      jj_consume_token(37);
      jj_consume_token(37);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ClassDeclaration() throws ParseException {
                           /*@bgen(jjtree) ClassDeclaration */
  ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      Identifier();
      if (jj_2_2(3)) {
        jj_consume_token(EXTENDS);
        Identifier();
      } else {
        ;
      }
      jj_consume_token(32);
      label_2:
      while (true) {
        if (jj_2_3(3)) {
          ;
        } else {
          break label_2;
        }
        VarDeclaration();
      }
      label_3:
      while (true) {
        if (jj_2_4(3)) {
          ;
        } else {
          break label_3;
        }
        MethodDeclaration();
      }
      jj_consume_token(37);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void VarDeclaration() throws ParseException {
                         /*@bgen(jjtree) VarDeclaration */
  ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      Identifier();
      jj_consume_token(38);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void MethodDeclaration() throws ParseException {
                            /*@bgen(jjtree) MethodDeclaration */
  ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PUBLIC);
      Type();
      Identifier();
      jj_consume_token(33);
      if (jj_2_6(3)) {
        Type();
        Identifier();
        label_4:
        while (true) {
          if (jj_2_5(3)) {
            ;
          } else {
            break label_4;
          }
          jj_consume_token(39);
          Type();
          Identifier();
        }
      } else {
        ;
      }
      jj_consume_token(36);
      jj_consume_token(32);
      label_5:
      while (true) {
        if (jj_2_7(2)) {
          ;
        } else {
          break label_5;
        }
        VarDeclaration();
      }
      label_6:
      while (true) {
        if (jj_2_8(3)) {
          ;
        } else {
          break label_6;
        }
        Statement();
      }
      ReturnExpression();
      jj_consume_token(38);
      jj_consume_token(37);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ReturnExpression() throws ParseException {
                           /*@bgen(jjtree) ReturnExpression */
  ASTReturnExpression jjtn000 = new ASTReturnExpression(JJTRETURNEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      if (jj_2_9(3)) {
        Expression();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Type() throws ParseException {
               /*@bgen(jjtree) Type */
  ASTType jjtn000 = new ASTType(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_10(2)) {
        jj_consume_token(INT);
        jj_consume_token(34);
        jj_consume_token(35);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                     jjtn000.token = token; jjtn000.token.image = "int[]";
      } else if (jj_2_11(3)) {
        jj_consume_token(BOOLEAN);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                   jjtn000.token = token;
      } else if (jj_2_12(3)) {
        jj_consume_token(INT);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                  jjtn000.token = token;
      } else if (jj_2_13(3)) {
        jj_consume_token(VOID);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                  jjtn000.token = token;
      } else if (jj_2_14(3)) {
        Identifier();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void Statement() throws ParseException {
    if (jj_2_16(3)) {
      jj_consume_token(32);
      label_7:
      while (true) {
        if (jj_2_15(3)) {
          ;
        } else {
          break label_7;
        }
        Statement();
      }
      jj_consume_token(37);
    } else if (jj_2_17(3)) {
      IfStatement();
    } else if (jj_2_18(3)) {
      WhileStatement();
    } else if (jj_2_19(3)) {
      PrintStatement();
    } else if (jj_2_20(2)) {
      Assignment();
    } else if (jj_2_21(2)) {
      ArrayAssignment();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Assignment() throws ParseException {
                     /*@bgen(jjtree) Assignment */
  ASTAssignment jjtn000 = new ASTAssignment(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      AssignmentOperator();
      Expression();
      jj_consume_token(38);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ArrayAssignment() throws ParseException {
                          /*@bgen(jjtree) ArrayAssignment */
  ASTArrayAssignment jjtn000 = new ASTArrayAssignment(JJTARRAYASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      jj_consume_token(34);
      Expression();
      jj_consume_token(35);
      AssignmentOperator();
      Expression();
      jj_consume_token(38);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AssignmentOperator() throws ParseException {
                             /*@bgen(jjtree) AssignmentOperator */
  ASTAssignmentOperator jjtn000 = new ASTAssignmentOperator(JJTASSIGNMENTOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_22(3)) {
        jj_consume_token(40);
      } else if (jj_2_23(3)) {
        jj_consume_token(41);
      } else if (jj_2_24(3)) {
        jj_consume_token(42);
      } else if (jj_2_25(3)) {
        jj_consume_token(43);
      } else if (jj_2_26(3)) {
        jj_consume_token(44);
      } else if (jj_2_27(3)) {
        jj_consume_token(45);
      } else if (jj_2_28(3)) {
        jj_consume_token(46);
      } else if (jj_2_29(3)) {
        jj_consume_token(47);
      } else if (jj_2_30(3)) {
        jj_consume_token(48);
      } else if (jj_2_31(3)) {
        jj_consume_token(49);
      } else if (jj_2_32(3)) {
        jj_consume_token(50);
      } else if (jj_2_33(3)) {
        jj_consume_token(51);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.token = token;
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void IfStatement() throws ParseException {
                      /*@bgen(jjtree) IfStatement */
  ASTIfStatement jjtn000 = new ASTIfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(33);
      Expression();
      jj_consume_token(36);
      Statement();
      if (jj_2_34(2147483647)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void WhileStatement() throws ParseException {
                         /*@bgen(jjtree) WhileStatement */
  ASTWhileStatement jjtn000 = new ASTWhileStatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(33);
      Expression();
      jj_consume_token(36);
      Statement();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void PrintStatement() throws ParseException {
                         /*@bgen(jjtree) PrintStatement */
  ASTPrintStatement jjtn000 = new ASTPrintStatement(JJTPRINTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(52);
      jj_consume_token(33);
      Expression();
      jj_consume_token(36);
      jj_consume_token(38);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Expression() throws ParseException {
    RelationalExpression();
  }

  final public void RelationalExpression() throws ParseException {
   ASTRelationalExpression jjtn001 = new ASTRelationalExpression(JJTRELATIONALEXPRESSION);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
    try {
      ArrayExpression();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 53:
        case 54:
        case 55:
        case 56:
        case 57:
        case 58:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_8;
        }
        RelationalOperator();
        ArrayExpression();
      }
    } catch (Throwable jjte001) {
   if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
    } finally {
   if (jjtc001) {
     jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
   }
    }
  }

  final public void RelationalOperator() throws ParseException {
                             /*@bgen(jjtree) RelationalOperator */
  ASTRelationalOperator jjtn000 = new ASTRelationalOperator(JJTRELATIONALOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_35(3)) {
        jj_consume_token(53);
      } else if (jj_2_36(3)) {
        jj_consume_token(54);
      } else if (jj_2_37(3)) {
        jj_consume_token(55);
      } else if (jj_2_38(3)) {
        jj_consume_token(56);
      } else if (jj_2_39(3)) {
        jj_consume_token(57);
      } else if (jj_2_40(3)) {
        jj_consume_token(58);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.token = token;
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ArrayExpression() throws ParseException {
   ASTArrayExpression jjtn001 = new ASTArrayExpression(JJTARRAYEXPRESSION);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
    try {
      CallExpression();
      label_9:
      while (true) {
        if (jj_2_41(2)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(34);
        CallExpression();
        jj_consume_token(35);
      }
    } catch (Throwable jjte001) {
   if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
    } finally {
   if (jjtc001) {
     jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
   }
    }
  }

  final public void CallExpression() throws ParseException {
    if (jj_2_44(3)) {
   ASTCallNode jjtn001 = new ASTCallNode(JJTCALLNODE);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
      try {
        AdditiveExpression();
        label_10:
        while (true) {
          if (jj_2_42(3)) {
            ;
          } else {
            break label_10;
          }
          jj_consume_token(59);
          Identifier();
          jj_consume_token(33);
          ExpList();
          jj_consume_token(36);
        }
      } catch (Throwable jjte001) {
   if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
      } finally {
   if (jjtc001) {
     jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
   }
      }
    } else if (jj_2_45(3)) {
   ASTCallNode jjtn002 = new ASTCallNode(JJTCALLNODE);
   boolean jjtc002 = true;
   jjtree.openNodeScope(jjtn002);
      try {
        Identifier();
        label_11:
        while (true) {
          jj_consume_token(59);
          Identifier();
          jj_consume_token(33);
          ExpList();
          jj_consume_token(36);
          if (jj_2_43(3)) {
            ;
          } else {
            break label_11;
          }
        }
      } catch (Throwable jjte002) {
   if (jjtc002) {
     jjtree.clearNodeScope(jjtn002);
     jjtc002 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte002 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte002;}
   }
   if (jjte002 instanceof ParseException) {
     {if (true) throw (ParseException)jjte002;}
   }
   {if (true) throw (Error)jjte002;}
      } finally {
   if (jjtc002) {
     jjtree.closeNodeScope(jjtn002, jjtree.nodeArity() > 1);
   }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void AdditiveExpression() throws ParseException {
    MultiplicativeExpression();
    label_12:
    while (true) {
      if (jj_2_46(3)) {
        ;
      } else {
        break label_12;
      }
      if (jj_2_47(3)) {
        jj_consume_token(60);
      } else if (jj_2_48(3)) {
        jj_consume_token(61);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                               ASTAddNode jjtn001 = new ASTAddNode(JJTADDNODE);
                                               boolean jjtc001 = true;
                                               jjtree.openNodeScope(jjtn001);
      try {
        MultiplicativeExpression();
      } catch (Throwable jjte001) {
                                               if (jjtc001) {
                                                 jjtree.clearNodeScope(jjtn001);
                                                 jjtc001 = false;
                                               } else {
                                                 jjtree.popNode();
                                               }
                                               if (jjte001 instanceof RuntimeException) {
                                                 {if (true) throw (RuntimeException)jjte001;}
                                               }
                                               if (jjte001 instanceof ParseException) {
                                                 {if (true) throw (ParseException)jjte001;}
                                               }
                                               {if (true) throw (Error)jjte001;}
      } finally {
                                               if (jjtc001) {
                                                 jjtree.closeNodeScope(jjtn001,  2);
                                               }
      }
    }
  }
